@@ -19,7 +19,7 @@ package xyz.jpenilla.chesscraft;
 
 import com.destroystokyo.paper.profile.PlayerProfile;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
@@ -45,21 +45,38 @@ import org.joml.AxisAngle4f;
 import org.joml.Quaternionf;
 import org.joml.Vector3f;
 import xyz.jpenilla.chesscraft.config.PieceOptions;
+import xyz.jpenilla.chesscraft.data.BoardPosition;
 import xyz.jpenilla.chesscraft.data.CardinalDirection;
-import xyz.jpenilla.chesscraft.data.Vec3;
+import xyz.jpenilla.chesscraft.data.Vec3i;
 import xyz.jpenilla.chesscraft.data.piece.Piece;
 import xyz.jpenilla.chesscraft.data.piece.PieceColor;
-import xyz.jpenilla.chesscraft.util.Reflection;
+import xyz.jpenilla.chesscraft.data.piece.PieceType;
+import xyz.jpenilla.chesscraft.util.MatchExporter;
+import xyz.jpenilla.chesscraft.util.SteppedAnimation;
 
 public interface PieceHandler {
   void applyToWorld(ChessBoard board, BoardStateHolder game, World world);
 
+  default void applyMoveToWorld(
+    final ChessBoard board,
+    final BoardStateHolder game,
+    final World world,
+    final ChessGame.Move move
+  ) {
+    this.applyToWorld(board, game, world);
+  }
+
   void removeFromWorld(ChessBoard board, World world);
 
   final class DisplayEntity implements PieceHandler {
+    private static final int SHRINK_DURATION = 12;
+    private static final int TELEPORT_DURATION = 5;
+
+    private final ChessCraft plugin;
     private final PieceOptions.DisplayEntity options;
 
-    public DisplayEntity(final PieceOptions.DisplayEntity options) {
+    public DisplayEntity(final ChessCraft plugin, final PieceOptions.DisplayEntity options) {
+      this.plugin = plugin;
       this.options = options;
     }
 
@@ -67,7 +84,7 @@ public interface PieceHandler {
     public void applyToWorld(final ChessBoard board, final BoardStateHolder game, final World world) {
       board.forEachPosition(boardPosition -> {
         final Piece piece = game.piece(boardPosition);
-        final Vec3 pos = board.toWorld(boardPosition);
+        final Vec3i pos = board.toWorld(boardPosition);
         if (piece == null) {
           removePieceAt(world, board, pos);
           return;
@@ -75,36 +92,170 @@ public interface PieceHandler {
 
         final List<Entity> existing = pieceAt(world, board, pos);
         final Consumer<ItemDisplay> displayConfigure = itemDisplay -> {
-          itemDisplay.setTransformation(transformationFor(board, piece));
-          itemDisplay.setItemDisplayTransform(ItemDisplay.ItemDisplayTransform.FIXED);
-          itemDisplay.setItemStack(this.options.item(piece));
-          itemDisplay.setInvulnerable(true);
-          itemDisplay.getPersistentDataContainer().set(BoardManager.PIECE_KEY, PersistentDataType.STRING, board.name());
+          this.configureItemDisplay(board, itemDisplay, piece);
+          itemDisplay.setTeleportDuration(0);
         };
         final @Nullable ItemDisplay existingItemDisplay = (ItemDisplay) existing.stream().filter(it -> it instanceof ItemDisplay).findFirst().orElse(null);
         if (existingItemDisplay != null) {
           displayConfigure.accept(existingItemDisplay);
           existingItemDisplay.teleport(pos.toLocation(world));
         } else {
-          Reflection.spawn(pos.toLocation(world), ItemDisplay.class, displayConfigure);
+          world.spawn(pos.toLocation(world), ItemDisplay.class, displayConfigure);
         }
 
-        final Consumer<Interaction> interactionConfigure = interaction -> {
-          interaction.setInvulnerable(true);
-          interaction.getPersistentDataContainer().set(BoardManager.PIECE_KEY, PersistentDataType.STRING, board.name());
-          interaction.setResponsive(true);
-          interaction.setInteractionHeight((float) this.options.height(piece.type()) * board.scale());
-          interaction.setInteractionWidth(0.5f * board.scale());
-        };
+        final Consumer<Interaction> interactionConfigure = interaction -> this.configureInteraction(board, interaction, piece);
         final @Nullable Interaction existingInteraction = (Interaction) existing.stream().filter(it -> it instanceof Interaction).findFirst().orElse(null);
-        final Location interactionLoc = new Location(world, pos.x() + 0.5 * board.scale(), pos.y(), pos.z() + 0.5 * board.scale());
+        final Location interactionLoc = interactionLoc(board, world, pos);
         if (existingInteraction != null) {
           interactionConfigure.accept(existingInteraction);
           existingInteraction.teleport(interactionLoc);
         } else {
-          Reflection.spawn(interactionLoc, Interaction.class, interactionConfigure);
+          world.spawn(interactionLoc, Interaction.class, interactionConfigure);
         }
       });
+    }
+
+    private void configureInteraction(final ChessBoard board, final Interaction interaction, final Piece piece) {
+      interaction.setInvulnerable(true);
+      interaction.getPersistentDataContainer().set(BoardManager.PIECE_KEY, PersistentDataType.STRING, board.name());
+      interaction.setResponsive(true);
+      interaction.setInteractionHeight((float) this.options.height(piece.type()) * board.scale());
+      interaction.setInteractionWidth(0.5f * board.scale());
+    }
+
+    private void configureItemDisplay(final ChessBoard board, final ItemDisplay itemDisplay, final Piece piece) {
+      itemDisplay.setTransformation(transformationFor(board, piece));
+      itemDisplay.setItemDisplayTransform(ItemDisplay.ItemDisplayTransform.FIXED);
+      itemDisplay.setItemStack(this.options.item(piece));
+      itemDisplay.setInvulnerable(true);
+      itemDisplay.getPersistentDataContainer().set(BoardManager.PIECE_KEY, PersistentDataType.STRING, board.name());
+    }
+
+    @Override
+    public void applyMoveToWorld(final ChessBoard board, final BoardStateHolder game, final World world, final ChessGame.Move move) {
+      board.animationExecutor().schedule(() -> this.makeAnimation(board, game, world, move));
+    }
+
+    private @Nullable SteppedAnimation makeAnimation(final ChessBoard board, final BoardStateHolder game, final World world, final ChessGame.Move move) {
+      final BoardPosition fromPos = BoardPosition.fromString(move.notation().substring(0, 2));
+      final BoardPosition toPos = BoardPosition.fromString(move.notation().substring(2, 4));
+
+      // Collect captured pieces (or rook in case of castle)
+      final List<List<Entity>> captures = new ArrayList<>();
+      board.forEachPosition(pos -> {
+        if (!pos.equals(fromPos) && game.piece(pos) == null) {
+          final List<Entity> entities = pieceAt(world, board, board.toWorld(pos));
+          if (entities.size() == 2) {
+            captures.add(entities);
+          }
+        }
+      });
+      final List<Entity> destEntities = pieceAt(world, board, board.toWorld(toPos));
+      if (destEntities.size() == 2) {
+        captures.add(destEntities);
+      }
+
+      final List<Entity> movedPieceEntities = pieceAt(world, board, board.toWorld(fromPos));
+
+      if (movedPieceEntities.size() != 2) {
+        this.inconsistentState(board, game, world, move);
+        return null;
+      }
+
+      final @Nullable Piece movedPiece = game.piece(toPos);
+      if (movedPiece == null) {
+        this.inconsistentState(board, game, world, move);
+        return null;
+      }
+
+      final SteppedAnimation.Builder animation = new SteppedAnimation.Builder();
+
+      this.movePiece(board, world, movedPieceEntities, toPos, movedPiece, animation);
+
+      // castling
+      if (movedPiece.type() == PieceType.KING && Math.abs(toPos.file() - fromPos.file()) == 2) {
+        if (captures.size() != 1 || captures.getFirst().size() != 2) {
+          this.inconsistentState(board, game, world, move);
+          return null;
+        }
+        final List<Entity> rook = captures.getFirst();
+        final BoardPosition rookDest = new BoardPosition(toPos.rank(), toPos.file() == 2 ? 3 : 5);
+        this.movePiece(board, world, rook, rookDest, game.piece(rookDest), animation);
+      } else {
+        for (final List<Entity> capture : captures) {
+          for (final Entity entity : capture) {
+            if (entity instanceof ItemDisplay display) {
+              display.setInterpolationDuration(SHRINK_DURATION);
+              display.setInterpolationDelay(-1);
+              // ensure interpolation duration change is sent
+              animation.step(0, () -> {
+                final Transformation transformation = display.getTransformation();
+                final Vector3f scale = transformation.getScale().mul(0.01f);
+                display.setTransformation(new Transformation(
+                  transformation.getTranslation(),
+                  transformation.getLeftRotation(),
+                  scale,
+                  transformation.getRightRotation()
+                ));
+              }).then(SHRINK_DURATION, display::remove);
+            } else {
+              entity.remove();
+            }
+          }
+        }
+      }
+
+      return animation
+        // ensure interpolation duration change is sent
+        .startDelay(1)
+        .build();
+    }
+
+    private void inconsistentState(
+      final ChessBoard board,
+      final BoardStateHolder game,
+      final World world,
+      final ChessGame.Move move
+    ) {
+      this.plugin.getSLF4JLogger().warn(
+        "Found inconsistent board state (move: {}), reapplying entire board\n{}",
+        move.notation(),
+        MatchExporter.writePgn(board.game().snapshotState(null), this.plugin.database()).join(),
+        new Throwable()
+      );
+      this.applyToWorld(board, game, world);
+    }
+
+    private void movePiece(
+      final ChessBoard board,
+      final World world,
+      final List<Entity> movedPiece,
+      final BoardPosition toPos,
+      final Piece destPiece,
+      final SteppedAnimation.Builder animation
+    ) {
+      for (final Entity entity : movedPiece) {
+        if (entity instanceof ItemDisplay display) {
+          display.setTeleportDuration(TELEPORT_DURATION);
+          // ensure teleport duration change is sent
+          animation.step(0, () -> {
+            display.teleport(board.toWorld(toPos).toLocation(world));
+            world.playSound(board.moveSound(), display.getX(), display.getY(), display.getZ());
+            display.setTeleportDuration(0);
+          });
+          // needed in case of promotion
+          this.configureItemDisplay(board, display, destPiece);
+        } else if (entity instanceof Interaction interaction) {
+          final Vec3i pos = board.toWorld(toPos);
+          entity.teleport(interactionLoc(board, world, pos));
+          // needed in case of promotion
+          this.configureInteraction(board, interaction, destPiece);
+        }
+      }
+    }
+
+    private static Location interactionLoc(final ChessBoard board, final World world, final Vec3i pos) {
+      return new Location(world, pos.x() + 0.5 * board.scale(), pos.y(), pos.z() + 0.5 * board.scale());
     }
 
     private static Transformation transformationFor(final ChessBoard board, final Piece piece) {
@@ -112,7 +263,7 @@ public interface PieceHandler {
       final Quaternionf left = new Quaternionf(new AxisAngle4f((float) Math.toRadians(90.0D), 1, 0, 0));
       transformForVersion(left);
       // rotate
-      final Quaternionf right = new Quaternionf(new AxisAngle4f((float) Math.toRadians(rotation(board.facing(), piece)), 0, 0, 1));
+      final Quaternionf right = new Quaternionf(new AxisAngle4f((float) Math.toRadians(rotation(board, piece)), 0, 0, 1));
 
       return new Transformation(
         // center
@@ -149,12 +300,13 @@ public interface PieceHandler {
       q.w = -y;
     }
 
-    private static float rotation(final CardinalDirection facing, final Piece piece) {
-      final double deg = facing.radians() * 180 / Math.PI;
+    private static float rotation(final ChessBoard board, final Piece piece) {
+      final boolean eastWest = !v1_19_X && (board.facing() == CardinalDirection.EAST || board.facing() == CardinalDirection.WEST);
+
       if (piece.color() == PieceColor.WHITE) {
-        return (float) deg + (v1_19_X ? 0f : 180f);
+        return (float) board.facing().degrees() + (eastWest ? 180 : 0);
       }
-      return (float) deg + (v1_19_X ? 180f : 0f);
+      return (float) board.facing().degrees() + (eastWest ? 0 : 180);
     }
 
     @Override
@@ -162,7 +314,7 @@ public interface PieceHandler {
       board.forEachPosition(pos -> removePieceAt(world, board, board.toWorld(pos)));
     }
 
-    private static void removePieceAt(final World world, final ChessBoard board, final Vec3 pos) {
+    private static void removePieceAt(final World world, final ChessBoard board, final Vec3i pos) {
       for (final Entity entity : pieceAt(world, board, pos)) {
         if (entity.getPersistentDataContainer().has(BoardManager.PIECE_KEY)) {
           entity.remove();
@@ -171,7 +323,7 @@ public interface PieceHandler {
     }
   }
 
-  private static List<Entity> pieceAt(final World world, final ChessBoard board, final Vec3 pos) {
+  private static List<Entity> pieceAt(final World world, final ChessBoard board, final Vec3i pos) {
     final List<Entity> entities = new ArrayList<>();
     entities.addAll(world.getNearbyEntities(
       pos.toLocation(world),
@@ -181,7 +333,7 @@ public interface PieceHandler {
       e -> e instanceof Display
     ));
     entities.addAll(world.getNearbyEntities(
-      new Location(world, pos.x() + 0.5 * board.scale(), pos.y(), pos.z() + 0.5 * board.scale()),
+      DisplayEntity.interactionLoc(board, world, pos),
       0.25,
       0.5,
       0.25,
@@ -201,14 +353,14 @@ public interface PieceHandler {
     @Override
     public void applyToWorld(final ChessBoard board, final BoardStateHolder game, final World world) {
       board.forEachPosition(boardPosition -> {
-        final Vec3 pos = board.toWorld(boardPosition);
+        final Vec3i pos = board.toWorld(boardPosition);
         removePieceAt(world, pos);
         final Piece piece = game.piece(boardPosition);
 
         if (piece == null) {
           return;
         }
-        Reflection.spawn(pos.toLocation(world), org.bukkit.entity.ItemFrame.class, itemFrame -> {
+        world.spawn(pos.toLocation(world), org.bukkit.entity.ItemFrame.class, itemFrame -> {
           itemFrame.setRotation(rotation(board.facing(), piece));
           itemFrame.setItem(this.options.item(piece));
           itemFrame.setFacingDirection(BlockFace.UP);
@@ -216,7 +368,7 @@ public interface PieceHandler {
           itemFrame.setVisible(false);
           itemFrame.getPersistentDataContainer().set(BoardManager.PIECE_KEY, PersistentDataType.STRING, board.name());
         });
-        Reflection.spawn(new Location(world, pos.x() + 0.5, pos.y() + this.options.heightOffset(piece.type()), pos.z() + 0.5), ArmorStand.class, stand -> {
+        world.spawn(new Location(world, pos.x() + 0.5, pos.y() + this.options.heightOffset(piece.type()), pos.z() + 0.5), ArmorStand.class, stand -> {
           stand.setInvulnerable(true);
           stand.getPersistentDataContainer().set(BoardManager.PIECE_KEY, PersistentDataType.STRING, board.name());
           stand.setGravity(false);
@@ -248,7 +400,7 @@ public interface PieceHandler {
       board.forEachPosition(pos -> removePieceAt(world, board.toWorld(pos)));
     }
 
-    private static void removePieceAt(final World world, final Vec3 pos) {
+    private static void removePieceAt(final World world, final Vec3i pos) {
       final Collection<Entity> entities = world.getNearbyEntities(
         new Location(world, pos.x() + 0.5, pos.y(), pos.z() + 0.5),
         0.25,
@@ -284,7 +436,7 @@ public interface PieceHandler {
         final PlayerProfile profile = Bukkit.createProfile(UUID.randomUUID());
         final PlayerTextures textures = profile.getTextures();
         try {
-          textures.setSkin(new URL("https://textures.minecraft.net/texture/" + this.options.texture(piece)));
+          textures.setSkin(URI.create("https://textures.minecraft.net/texture/" + this.options.texture(piece)).toURL());
         } catch (final IOException ex) {
           throw new RuntimeException(ex);
         }
